--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -471,7 +471,7 @@ comments:
   # Display comment count in post's top_img
   count: true
   # Display comment count in Home Page
-  card_post_count: true
+  card_post_count: false
 
 # Gitalk
 # https://github.com/gitalk/gitalk
@@ -492,7 +492,7 @@ waline:
   pageview: false
   option:
     imageUploader: true
-    reaction: false
+    # reaction: false
 # Utterances
 # https://utteranc.es/
 
